<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings">

    <ListPreference
        android:defaultValue="@string/settings_order_by_topic_default"
        android:entries="@array/settings_order_by_topic_labels"
        android:entryValues="@array/settings_order_by_topic_value"
        android:key="@string/settings_order_by_topic_key"
        android:title="@string/settings_order_by_topic_label"/>
    <ListPreference
        android:defaultValue="@string/settings_order_by_date_default"
        android:entries="@array/settings_order_by_date_labels"
        android:entryValues="@array/settings_order_by_date_value"
        android:key="@string/settings_order_by_date_key"
        android:title="@string/settings_order_by_date_label"/>

</PreferenceScreen>